fix decoration, default hash, wrapped anchor

--- a/layout.css
+++ b/layout.css
@@ -47,9 +47,6 @@ body {
   padding: 0.2rem;
   margin: 0.2rem;
 }
-.nav-bar-title {
-  text-decoration: none;
-}
 .nav-item {
   padding: 0.2rem;
   margin: 0 0.4rem;
@@ -59,7 +56,6 @@ body {
   background-color: transparent;
   font-size: 1rem;
   cursor: pointer;
-  text-decoration: none;
 }
 a.nav-item:hover,
 a.nav-item.active {
@@ -103,7 +99,6 @@ a.nav-item.active {
   display: block;
   border-left: 4px solid transparent;
   color: var(--c-text);
-  text-decoration: none;
 }
 .sidebar-item-0 {
   margin-top: 1rem;
